mall-swarm/account-service/src/main/k8s/mysqlExternal.yml
apiVersion: v1
kind: Service
metadata:
  name: mall-external-service
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 3306
