mall-swarm/account-service/src/main/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  labels:
    app: account
spec:
  selector:
    app: account
  ports:
    - name: account-port
      port: 80
      targetPort: 8081
