mall-swarm/account-service/src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-account
spec:
  rules:
    - host: accountserver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 8081
  ingressClassName: nginx
